@@ -2,6 +2,7 @@
 #define __GLIB_YAML_H__
 
 #include <yaml-components/glib-yaml-stream.h>
+#include <yaml-components/glib-yaml-document.h>
 #include <yaml-components/glib-yaml-node.h>
 
 #endif
